Void soul rendertype, bodysnatcher, ddemissivelayer, other changes